# oaPIPP

./: CMakeLists.txt  README.md  animationOptions.cc  animationOptions.h  configuration.cc  configuration.h  doProcessing.cc  doProcessing.h  inputOptions.cc  inputOptions.h  mainWindow.cc  mainWindow.h  oapipp.cc  oapipp.h  oapipp_common.h  outputOptions.cc  outputOptions.h  processingOptions.cc  processingOptions.h  qualityOptions.cc  qualityOptions.h  sourceFiles.cc  sourceFiles.h
ui/: animationOptions.ui  doProcessing.ui  inputOptions.ui  outputOptions.ui  pipp.ui  processingOptions.ui  qualityOptions.ui  sourceFiles.ui
